fix(ui): sentry 9 polish pass #2 (#8388)
* Alignment and padding pass

* box shadow below org avatars

* fix 'save current search' button from being too narrow

* widen stream-sort dropdown so text doesn't get clipped

* Fix 'manage environment' button margin

* truncate long environment names

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -896,7 +896,7 @@
 
   .dropdown-menu {
     max-width: 350px;
-    min-width: 250px;
+    min-width: 275px;
 
     .row {
       margin: 8px 5px 5px;
@@ -940,10 +940,10 @@
 
   .dropdown-toggle {
     .btn-default;
-    width: 168px;
+    width: 176px;
     font-size: 14px;
     border: 1px solid lighten(@gray-lighter, 7);
-    padding: 6px 12px;
+    padding: 6px 8px;
     border-radius: 3px;
 
     display: block;
@@ -989,7 +989,6 @@
 */
 
 .stream-header {
-  margin-top: -2px;
   margin-bottom: 15px;
 }
 
